# solana-ai-agent

./: .gitignore  README.md  walkthrough.md
solana_agent_backend/: Cargo.toml  build_check.txt  build_debug.txt  build_dns.txt  build_doh.txt  build_error.txt  build_error_2.txt  build_error_2_utf8.txt  build_error_utf8.txt  build_errors.txt  build_ipv4.txt  build_jup.txt  build_v0.txt  build_v3.txt  build_v3b.txt
solana_agent_backend/src/: ai.rs  main.rs  payment.rs  swap.rs
solana_agent_frontend/: App.js  app.json  eas.json  package-lock.json  package.json  polyfills.js
