[package]
name = "solana_agent_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "trust-dns"] }
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
base64 = "0.21"
bincode = "1.3"
dotenv = "0.15"
tower = "0.4"         # For middleware
tower-http = { version = "0.5", features = ["cors"] }
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
